--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+        <script>
+        var socket = io();
+        var el;
+
+        socket.on('time', function(timeString) {
+          el = document.getElementById('server-time')
+          el.innerHTML = 'Server time: ' + timeString;
+        });
+    </script>
     <title>React App</title>
   </head>
   <body>
